# argo_go2_ws

./: .gitignore  map_1777364513.pgm  map_1777364513.yaml
install/: local_setup.sh  setup.sh
install/go2_bringup/share/go2_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/go2_description/share/go2_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/go2_driver/include/go2_driver/: go2_api_id.hpp  go2_driver.hpp
install/go2_driver/share/go2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/go2_hardware/share/go2_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  (+6 more)
log/: latest_build
src/: LICENSE  README.md
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/config/: realsense_params.yaml
src/go2_bringup/launch/: go2.launch.py
src/go2_description/launch/: robot.launch.py
src/go2_nav/: CMakeLists.txt  package.xml
src/go2_nav/launch/: navigation.launch.foxy.py  navigation.launch.py  slam.launch.py
src/go2_nav/maps/: map_1777364759.pgm  map_1777364759.yaml
src/go2_nav/params/: go2_nav2.yaml  slam_toolbox_params.yaml
src/go2_nav/rviz/: slam_view.rviz
src/go2_nav/scripts/: pointcloud_filter.py
src/go2_rviz/: package.xml
src/go2_rviz/config/: go2_nav2.rviz  go2_rviz2.rviz  nav2_rviz.rviz
src/hesai_ros_driver/config/: config.yaml
src/nav2_bringup/launch/: localization_launch.py  navigation_launch.py
(+951 files in other folders)
